forgot to add articles

--- a/index.html
+++ b/index.html
@@ -213,6 +213,25 @@
       </div>
     </div>
 
+    <div class="card" data-tab="bootstrap">
+      <div class="headline">WOW BOOTSTRAP 4</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/max.jpg" />
+        </div>
+        <span>By Skyler Dowdy</span>
+      </div>
+    </div>
+    <div class="card" data-tab="jquery">
+      <div class="headline">WOW JQUERY</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/fido.jpg" />
+        </div>
+        <span>By Skyler Dowdy</span>
+      </div>
+    </div>
+
   </div>
 </body>
 
